--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "This service provides and process halo requests for the RedditHalo platform.",
   "main": "index.js",
   "scripts": {
-    "create-stack": "$Env:STACK_NAME=\"halo-service\" & $Env:S3_BUCKET_NAME=\"halo-service-S3\" & bash ./bin/create.sh",
-    "delete-stack": "setx $(cat config.env | xargs) && ./bin/delete.sh",
-    "update-stack": "setx $(cat config.env | xargs) && ./bin/update.sh"
+    "create-stack": "export $(cat config.env | xargs) && bash ./bin/create.sh",
+    "delete-stack": "export $(cat config.env | xargs) && bash ./bin/delete.sh",
+    "update-stack": "export $(cat config.env | xargs) && bash ./bin/update.sh"
   },
   "author": "RedditHalo",
   "license": "MIT",
