--- a/template.yml
+++ b/template.yml
@@ -4,7 +4,7 @@ Description: >
   To add a new function define the function role and the function itself following
   the template of FooFunction.
 Parameters:
-  AddHaloVersion:
+  HaloVersion:
     Description: "Version of the lambda function required to update existing stack"
     Type: String
     Default: "latest"
@@ -14,6 +14,49 @@ Parameters:
     Type: "String"
 
 Resources:
+  HaloApi:
+    Type: "AWS::ApiGateway::RestApi"
+    Properties:
+      Name: "HaloApi"
+      Description: "Main API for working with halos"
+
+  HaloApiAddHaloMethod:
+    Type: "AWS::ApiGateway::Method"
+    Properties:
+      AuthorizationType: "NONE"
+      HttpMethod: "POST"
+      Integration:
+        IntegrationHttpMethod: "POST"
+        Type: "AWS_PROXY"
+        Uri: !Sub
+          - "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations"
+          - lambdaArn: !GetAtt "HaloLambda.Arn"
+      ResourceId: !GetAtt "HaloApi.RootResourceId"
+      RestApiId: !Ref "HaloApi"
+
+  HaloApiGetHalosMethod:
+    Type: "AWS::ApiGateway::Method"
+    Properties:
+      AuthorizationType: "NONE"
+      HttpMethod: "GET"
+      Integration:
+        IntegrationHttpMethod: "GET"
+        Type: "AWS"
+        Uri: !Sub
+          - "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${lambdaArn}/invocations"
+          - lambdaArn: !GetAtt "HaloLambda.Arn"
+      ResourceId: !GetAtt "HaloApi.RootResourceId"
+      RestApiId: !Ref "HaloApi"
+
+  HaloApiDeployment:
+    Type: "AWS::ApiGateway::Deployment"
+    DependsOn:
+      - "HaloApiAddHaloMethod"
+      - "HaloApiGetHalosMethod"
+    Properties:
+      RestApiId: !Ref "HaloApi"
+      StageName: "Production"
+
   LambdaRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -39,20 +82,36 @@ Resources:
               - logs:CreateLogStream
               - logs:PutLogEvents
               Resource: "*"
+            - Effect: Allow
+              Action:
+              - dynamodb:PutItem
+              - dynamodb:GetItem
+              - dynamodb:Query
+              - dynamodb:Scan
+              Resource: "*"
 
-  AddHalo:
+
+  HaloLambda:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
         S3Bucket: !Ref S3BucketName
-        S3Key: !Sub AddHalo-${AddHaloVersion}.zip
+        S3Key: !Sub Halo-${HaloVersion}.zip
       Description: Lambda function that schedules updates
       Environment:
         Variables:
           NODE_ENV: production
-      FunctionName: AddHalo
+      FunctionName: HaloLambda
       Handler: "index.handler"
       MemorySize: 128
       Role: !GetAtt LambdaRole.Arn
       Runtime: "nodejs12.x"
       Timeout: 100
+
+  HaloLambdaInvoke:
+    Type: "AWS::Lambda::Permission"
+    Properties:
+      Action: "lambda:InvokeFunction"
+      FunctionName: !GetAtt "HaloLambda.Arn"
+      Principal: "apigateway.amazonaws.com"
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${HaloApi}/*/POST/"
